--- a/services/auth-service/Cargo.toml
+++ b/services/auth-service/Cargo.toml
@@ -3,15 +3,8 @@ name = "auth-service"
 version = "0.1.0"
 edition = "2024"
 
+[workspace]
+members = [".", "api", "entity", "migration"]
+
 [dependencies]
-axum = "0.8.1"
-axum-extra = { version = "0.10.0", features = ["typed-header"] }
-chrono = "0.4.40"
-dotenvy = "0.15.7"
-jsonwebtoken = "9.3.1"
-serde = { version = "1.0.218", features = ["derive"] }
-serde_json = "1.0.139"
-tokio = { version = "1.43.0", features = ["full"] }
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-uuid = { version = "1.15.0", features = ["v4"] }
+api = { path = "api" }
