--- a/services/auth-service/api/Cargo.toml
+++ b/services/auth-service/api/Cargo.toml
@@ -24,3 +24,4 @@ uuid = { version = "1.15.0", features = ["serde", "v4"] }
 entity = { path = "../entity" }
 migration = { path = "../migration" }
 argon2 = "0.5.3"
+thiserror = "2.0.11"
