Damn PR pipeline got beef already

--- a/.github/workflows/auth-service-pr.yml
+++ b/.github/workflows/auth-service-pr.yml
@@ -26,7 +26,7 @@ jobs:
             - name: Check formatting
               run: |
                 cd services/auth-service
-                cargo fmt -- --check
+                cargo fmt --check
 
             - name: Run Clippy (Linting)
               run: |
