--- a/services/auth-service/entity/Cargo.toml
+++ b/services/auth-service/entity/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+schemars = "0.8.22"
 sea-orm = "1.1.6"
 serde = { version = "1.0.218", features = ["derive"] }
