--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "rust-analyzer.linkedProjects": ["services/auth-service/Cargo.toml"]
+    "rust-analyzer.linkedProjects": ["services/auth-service/Cargo.toml", "common/shared-rust/Cargo.toml", "api-gateway/Cargo.toml"]
 }
