--- a/services/auth-service/api/Cargo.toml
+++ b/services/auth-service/api/Cargo.toml
@@ -21,15 +21,17 @@ tokio = { version = "1.43.0", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 uuid = { version = "1.15.0", features = ["serde", "v4"] }
-
-entity = { path = "../entity" }
-migration = { path = "../migration" }
 argon2 = "0.5.3"
 thiserror = "2.0.11"
 http-body-util = "0.1.2"
 mime = "0.3.17"
 aide = { version = "0.14.1", features = ["axum-json", "scalar", "macros"] }
 schemars = { version = "0.8.22", features = ["uuid1"] }
+
+entity = { path = "../entity" }
+migration = { path = "../migration" }
+
+shared-rust = { path = "../../../common/shared-rust" }
 
 [dev-dependencies]
 tower = { version = "0.5.2", features = ["util"] }
