--- a/api-gateway/Cargo.toml
+++ b/api-gateway/Cargo.toml
@@ -4,4 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+axum = { version = "0.8.1", features = ["macros"] }
+axum-extra = { version = "0.10.0", features = ["typed-header"] }
+dotenvy = "0.15.7"
+serde = { version = "1.0.218", features = ["derive", "rc"] }
+serde_json = "1.0.139"
+tokio = { version = "1.43.0", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+thiserror = "2.0.11"
+aide = { version = "0.14.1", features = ["axum-json", "scalar", "macros"] }
+schemars = { version = "0.8.22", features = ["uuid1"] }
+
 shared-rust = { path = "../common/shared-rust" }
