--- a/api-gateway/Cargo.toml
+++ b/api-gateway/Cargo.toml
@@ -17,3 +17,5 @@ aide = { version = "0.14.1", features = ["axum-json", "scalar", "macros"] }
 schemars = { version = "0.8.22", features = ["uuid1"] }
 
 shared-rust = { path = "../common/shared-rust" }
+uuid = { version = "1.15.1", features = ["v4", "serde"] }
+reqwest = { version = "0.12.14", features = ["json"] }
