--- a/services/auth-service/Dockerfile
+++ b/services/auth-service/Dockerfile
@@ -1,7 +1,7 @@
 FROM rust
 
 COPY . /app
-WORKDIR /app
+WORKDIR /app/services/auth-service
 RUN cargo build --release
 
 CMD ["./target/release/auth-service"]
