--- a/infra/helm/charts/api-gateway/templates/service.yaml
+++ b/infra/helm/charts/api-gateway/templates/service.yaml
@@ -7,9 +7,9 @@ metadata:
 spec:
   selector:
     app: api-gateway
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
-  - port: {{ .Values.service.port }}
-    targetPort: {{ .Values.service.targetPort }}
+  - port: 80
+    targetPort: 80
     protocol: TCP
     name: http
