--- a/infra/helm/charts/auth/templates/db-service.yaml
+++ b/infra/helm/charts/auth/templates/db-service.yaml
@@ -9,7 +9,7 @@ spec:
   selector:
     app: {{ .Release.Name }}-auth-db
   ports:
-  - port: {{ .Values.database.port }}
-    targetPort: {{ .Values.database.port }}
+  - port: 5432
+    targetPort: 5432
     protocol: TCP
     name: postgres
