--- a/infra/helm/charts/auth/templates/service-service.yaml
+++ b/infra/helm/charts/auth/templates/service-service.yaml
@@ -9,7 +9,7 @@ spec:
     app: {{ .Release.Name }}-auth-service
   type: ClusterIP
   ports:
-  - port: {{ .Values.service.port }}
-    targetPort: {{ .Values.service.targetPort }}
+  - port: 80
+    targetPort: 80
     protocol: TCP
     name: http
