--- a/infra/helm/charts/api-gateway/templates/service.yaml
+++ b/infra/helm/charts/api-gateway/templates/service.yaml
@@ -7,9 +7,7 @@ metadata:
 spec:
   selector:
     app: api-gateway
-  type: ClusterIP
+  type: LoadBalancer
   ports:
-  - port: 80
+  - port: 8080
     targetPort: 80
-    protocol: TCP
-    name: http
