--- a/a.n.t.t.o/package.json
+++ b/a.n.t.t.o/package.json
@@ -1,34 +1,33 @@
 {
   "name": "a.n.t.t.o",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.0.15",
-    "postcss-cli": "^11.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@reduxjs/toolkit": "^2.2.3",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
+    "next": "^14.2.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-moment": "^1.1.3",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "required": "^1.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@tailwindcss/vite": "^4.0.15",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.21",
-    "daisyui": "^5.0.6",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.15",
-    "vite": "^6.2.2"
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.12",
+    "autoprefixer": "^10.0.1",
+    "daisyui": "^4.9.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.3"
   }
 }
