--- a/api-gateway/Cargo.toml
+++ b/api-gateway/Cargo.toml
@@ -14,8 +14,9 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 thiserror = "2.0.11"
 aide = { version = "0.14.1", features = ["axum-json", "scalar", "macros"] }
-schemars = { version = "0.8.22", features = ["uuid1"] }
+schemars = { version = "0.8.22", features = ["uuid1", "chrono"] }
 
 shared-rust = { path = "../common/shared-rust" }
 uuid = { version = "1.15.1", features = ["v4", "serde"] }
 reqwest = { version = "0.12.14", features = ["json"] }
+chrono = { version = "0.4.40", features = ["serde"] }
