--- a/common/shared-rust/Cargo.toml
+++ b/common/shared-rust/Cargo.toml
@@ -9,7 +9,7 @@ axum = "0.8.1"
 axum-extra = { version = "0.10.0", features = ["typed-header"] }
 chrono = "0.4.40"
 jsonwebtoken = "9.3.1"
-schemars = "0.8.22"
+schemars = { version = "0.8.22", features = ["uuid1"] }
 serde = "1.0.219"
 serde_json = "1.0.140"
 thiserror = "2.0.12"
