--- a/services/content-service/requirements.txt
+++ b/services/content-service/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.8.1
-azure-identity==1.21.0
 azure-cli==2.71.0
+azure-identity==1.21.0
 Django==5.1.7
 django-cleanup==9.0.0
 django-debug-toolbar==5.1.0
+django-environ==0.12.0
 django-redis==5.4.0
 django-storages[azure]==1.14.6
 djangorestframework==3.15.2
