--- a/a.n.t.t.o/package.json
+++ b/a.n.t.t.o/package.json
@@ -18,7 +18,8 @@
     "react-moment": "^1.1.3",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "required": "^1.0.0"
+    "required": "^1.0.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
