Add community service to k8s cluster

--- a/infra/helm/umbrella-chart/Chart.yaml
+++ b/infra/helm/umbrella-chart/Chart.yaml
@@ -9,6 +9,9 @@ dependencies:
   - name: events
     version: "0.1.0"
     repository: "file://../charts/events"
+  - name: community
+    version: "0.1.0"
+    repository: "file://../charts/community"
   - name: api-gateway
     version: "0.1.0"
     repository: "file://../charts/api-gateway"
