Add Content Service (#11)
Co-authored-by: Fedron <40535546+Fedron@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .env
 target
+services/content-service/db.sqlite3
+dump.rdb
 infra/helm/umbrella-chart/charts/*
 infra/helm/umbrella-chart/Chart.lock
 __pycache__/
