--- a/api-gateway/Cargo.toml
+++ b/api-gateway/Cargo.toml
@@ -23,3 +23,4 @@ chrono = { version = "0.4.40", features = ["serde"] }
 metrics = "0.24.1"
 metrics-exporter-prometheus = "0.16.2"
 axum-reverse-proxy = "0.8.0"
+tower-http = { version = "0.6.2", features = ["cors"] }
