--- a/infra/helm/charts/api-gateway/templates/deployment.yaml
+++ b/infra/helm/charts/api-gateway/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: api-gateway
         image: "api-gateway:latest"
-        imagePullPolicy: Never
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
         - containerPort: 9090
