--- a/infra/helm/charts/auth/templates/service-deployment.yaml
+++ b/infra/helm/charts/auth/templates/service-deployment.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: auth-service
         image: "auth-service:latest"
-        imagePullPolicy: Never
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
         env:
