--- a/infra/helm/charts/events/templates/deployment.yaml
+++ b/infra/helm/charts/events/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: events-service
         image: "events-service:latest"
-        imagePullPolicy: Never
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8000
         resources:
