--- a/infra/helm/umbrella-chart/Chart.yaml
+++ b/infra/helm/umbrella-chart/Chart.yaml
@@ -18,3 +18,6 @@ dependencies:
   - name: api-gateway
     version: "0.1.0"
     repository: "file://../charts/api-gateway"
+  - name: frontend
+    version: "0.1.0"
+    repository: "file://../charts/frontend"
